# gen/vlr/api/api.pb.go
@@ -73,6 +73,58 @@ func (MatchState) EnumDescriptor() ([]byte, []int) {
 	return file_vlr_api_api_proto_rawDescGZIP(), []int{0}
 }
 
+type EventState int32
+
+const (
+	EventState_EVENT_STATE_UNSPECIFIED EventState = 0
+	EventState_EVENT_STATE_ONGOING     EventState = 1
+	EventState_EVENT_STATE_UPCOMING    EventState = 2
+	EventState_EVENT_STATE_COMPLETED   EventState = 3
+)
+
+// Enum value maps for EventState.
+var (
+	EventState_name = map[int32]string{
+		0: "EVENT_STATE_UNSPECIFIED",
+		1: "EVENT_STATE_ONGOING",
+		2: "EVENT_STATE_UPCOMING",
+		3: "EVENT_STATE_COMPLETED",
+	}
+	EventState_value = map[string]int32{
+		"EVENT_STATE_UNSPECIFIED": 0,
+		"EVENT_STATE_ONGOING":     1,
+		"EVENT_STATE_UPCOMING":    2,
+		"EVENT_STATE_COMPLETED":   3,
+	}
+)
+
+func (x EventState) Enum() *EventState {
+	p := new(EventState)
+	*p = x
+	return p
+}
+
+func (x EventState) String() string {
+	return protoimpl.X.EnumStringOf(x.Descriptor(), protoreflect.EnumNumber(x))
+}
+
+func (EventState) Descriptor() protoreflect.EnumDescriptor {
+	return file_vlr_api_api_proto_enumTypes[1].Descriptor()
+}
+
+func (EventState) Type() protoreflect.EnumType {
+	return &file_vlr_api_api_proto_enumTypes[1]
+}
+
+func (x EventState) Number() protoreflect.EnumNumber {
+	return protoreflect.EnumNumber(x)
+}
+
+// Deprecated: Use EventState.Descriptor instead.
+func (EventState) EnumDescriptor() ([]byte, []int) {
+	return file_vlr_api_api_proto_rawDescGZIP(), []int{1}
+}
+
 type RosterEntryRole int32
 
 const (
@@ -132,11 +184,11 @@ func (x RosterEntryRole) String() string {
 }
 
 func (RosterEntryRole) Descriptor() protoreflect.EnumDescriptor {
-	return file_vlr_api_api_proto_enumTypes[1].Descriptor()
+	return file_vlr_api_api_proto_enumTypes[2].Descriptor()
 }
 
 func (RosterEntryRole) Type() protoreflect.EnumType {
-	return &file_vlr_api_api_proto_enumTypes[1]
+	return &file_vlr_api_api_proto_enumTypes[2]
 }
 
 func (x RosterEntryRole) Number() protoreflect.EnumNumber {
@@ -145,7 +197,7 @@ func (x RosterEntryRole) Number() protoreflect.EnumNumber {
 
 // Deprecated: Use RosterEntryRole.Descriptor instead.
 func (RosterEntryRole) EnumDescriptor() ([]byte, []int) {
-	return file_vlr_api_api_proto_rawDescGZIP(), []int{1}
+	return file_vlr_api_api_proto_rawDescGZIP(), []int{2}
 }
 
 type Match struct {
@@ -929,34 +981,42 @@ var file_vlr_api_api_proto_rawDesc = []byte{
 	0x54, 0x45, 0x5f, 0x4c, 0x49, 0x56, 0x45, 0x10, 0x01, 0x12, 0x18, 0x0a, 0x14, 0x4d, 0x41, 0x54,
 	0x43, 0x48, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f, 0x55, 0x50, 0x43, 0x4f, 0x4d, 0x49, 0x4e,
 	0x47, 0x10, 0x02, 0x12, 0x19, 0x0a, 0x15, 0x4d, 0x41, 0x54, 0x43, 0x48, 0x5f, 0x53, 0x54, 0x41,
-	0x54, 0x45, 0x5f, 0x43, 0x4f, 0x4d, 0x50, 0x4c, 0x45, 0x54, 0x45, 0x44, 0x10, 0x03, 0x2a, 0xfa,
-	0x02, 0x0a, 0x0f, 0x52, 0x6f, 0x73, 0x74, 0x65, 0x72, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x52, 0x6f,
-	0x6c, 0x65, 0x12, 0x21, 0x0a, 0x1d, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54,
-	0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46,
-	0x49, 0x45, 0x44, 0x10, 0x00, 0x12, 0x1e, 0x0a, 0x1a, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f,
-	0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x49, 0x4e, 0x41, 0x43, 0x54,
-	0x49, 0x56, 0x45, 0x10, 0x01, 0x12, 0x1c, 0x0a, 0x18, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f,
-	0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x50, 0x4c, 0x41, 0x59, 0x45,
-	0x52, 0x10, 0x02, 0x12, 0x19, 0x0a, 0x15, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e,
-	0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x53, 0x55, 0x42, 0x10, 0x03, 0x12, 0x1e,
-	0x0a, 0x1a, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52,
-	0x4f, 0x4c, 0x45, 0x5f, 0x53, 0x54, 0x41, 0x4e, 0x44, 0x5f, 0x49, 0x4e, 0x10, 0x04, 0x12, 0x1b,
-	0x0a, 0x17, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52,
-	0x4f, 0x4c, 0x45, 0x5f, 0x43, 0x4f, 0x41, 0x43, 0x48, 0x10, 0x07, 0x12, 0x20, 0x0a, 0x1c, 0x52,
+	0x54, 0x45, 0x5f, 0x43, 0x4f, 0x4d, 0x50, 0x4c, 0x45, 0x54, 0x45, 0x44, 0x10, 0x03, 0x2a, 0x77,
+	0x0a, 0x0a, 0x45, 0x76, 0x65, 0x6e, 0x74, 0x53, 0x74, 0x61, 0x74, 0x65, 0x12, 0x1b, 0x0a, 0x17,
+	0x45, 0x56, 0x45, 0x4e, 0x54, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f, 0x55, 0x4e, 0x53, 0x50,
+	0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44, 0x10, 0x00, 0x12, 0x17, 0x0a, 0x13, 0x45, 0x56, 0x45,
+	0x4e, 0x54, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f, 0x4f, 0x4e, 0x47, 0x4f, 0x49, 0x4e, 0x47,
+	0x10, 0x01, 0x12, 0x18, 0x0a, 0x14, 0x45, 0x56, 0x45, 0x4e, 0x54, 0x5f, 0x53, 0x54, 0x41, 0x54,
+	0x45, 0x5f, 0x55, 0x50, 0x43, 0x4f, 0x4d, 0x49, 0x4e, 0x47, 0x10, 0x02, 0x12, 0x19, 0x0a, 0x15,
+	0x45, 0x56, 0x45, 0x4e, 0x54, 0x5f, 0x53, 0x54, 0x41, 0x54, 0x45, 0x5f, 0x43, 0x4f, 0x4d, 0x50,
+	0x4c, 0x45, 0x54, 0x45, 0x44, 0x10, 0x03, 0x2a, 0xfa, 0x02, 0x0a, 0x0f, 0x52, 0x6f, 0x73, 0x74,
+	0x65, 0x72, 0x45, 0x6e, 0x74, 0x72, 0x79, 0x52, 0x6f, 0x6c, 0x65, 0x12, 0x21, 0x0a, 0x1d, 0x52,
 	0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45,
-	0x5f, 0x48, 0x45, 0x41, 0x44, 0x5f, 0x43, 0x4f, 0x41, 0x43, 0x48, 0x10, 0x08, 0x12, 0x25, 0x0a,
-	0x21, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f,
-	0x4c, 0x45, 0x5f, 0x41, 0x53, 0x53, 0x49, 0x53, 0x54, 0x41, 0x4e, 0x54, 0x5f, 0x43, 0x4f, 0x41,
-	0x43, 0x48, 0x10, 0x09, 0x12, 0x27, 0x0a, 0x23, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45,
-	0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x50, 0x45, 0x52, 0x46, 0x4f, 0x52,
-	0x4d, 0x41, 0x4e, 0x43, 0x45, 0x5f, 0x43, 0x4f, 0x41, 0x43, 0x48, 0x10, 0x0a, 0x12, 0x1d, 0x0a,
-	0x19, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f,
-	0x4c, 0x45, 0x5f, 0x41, 0x4e, 0x41, 0x4c, 0x59, 0x53, 0x54, 0x10, 0x0b, 0x12, 0x1d, 0x0a, 0x19,
+	0x5f, 0x55, 0x4e, 0x53, 0x50, 0x45, 0x43, 0x49, 0x46, 0x49, 0x45, 0x44, 0x10, 0x00, 0x12, 0x1e,
+	0x0a, 0x1a, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52,
+	0x4f, 0x4c, 0x45, 0x5f, 0x49, 0x4e, 0x41, 0x43, 0x54, 0x49, 0x56, 0x45, 0x10, 0x01, 0x12, 0x1c,
+	0x0a, 0x18, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52,
+	0x4f, 0x4c, 0x45, 0x5f, 0x50, 0x4c, 0x41, 0x59, 0x45, 0x52, 0x10, 0x02, 0x12, 0x19, 0x0a, 0x15,
 	0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c,
-	0x45, 0x5f, 0x4d, 0x41, 0x4e, 0x41, 0x47, 0x45, 0x52, 0x10, 0x0c, 0x42, 0x23, 0x5a, 0x21, 0x67,
-	0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x64, 0x65, 0x72, 0x61, 0x72, 0x6b,
-	0x65, 0x6e, 0x2f, 0x76, 0x6c, 0x72, 0x2d, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x45, 0x5f, 0x53, 0x55, 0x42, 0x10, 0x03, 0x12, 0x1e, 0x0a, 0x1a, 0x52, 0x4f, 0x53, 0x54, 0x45,
+	0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x53, 0x54, 0x41,
+	0x4e, 0x44, 0x5f, 0x49, 0x4e, 0x10, 0x04, 0x12, 0x1b, 0x0a, 0x17, 0x52, 0x4f, 0x53, 0x54, 0x45,
+	0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x43, 0x4f, 0x41,
+	0x43, 0x48, 0x10, 0x07, 0x12, 0x20, 0x0a, 0x1c, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45,
+	0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x48, 0x45, 0x41, 0x44, 0x5f, 0x43,
+	0x4f, 0x41, 0x43, 0x48, 0x10, 0x08, 0x12, 0x25, 0x0a, 0x21, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52,
+	0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x41, 0x53, 0x53, 0x49,
+	0x53, 0x54, 0x41, 0x4e, 0x54, 0x5f, 0x43, 0x4f, 0x41, 0x43, 0x48, 0x10, 0x09, 0x12, 0x27, 0x0a,
+	0x23, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f,
+	0x4c, 0x45, 0x5f, 0x50, 0x45, 0x52, 0x46, 0x4f, 0x52, 0x4d, 0x41, 0x4e, 0x43, 0x45, 0x5f, 0x43,
+	0x4f, 0x41, 0x43, 0x48, 0x10, 0x0a, 0x12, 0x1d, 0x0a, 0x19, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52,
+	0x5f, 0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x41, 0x4e, 0x41, 0x4c,
+	0x59, 0x53, 0x54, 0x10, 0x0b, 0x12, 0x1d, 0x0a, 0x19, 0x52, 0x4f, 0x53, 0x54, 0x45, 0x52, 0x5f,
+	0x45, 0x4e, 0x54, 0x52, 0x59, 0x5f, 0x52, 0x4f, 0x4c, 0x45, 0x5f, 0x4d, 0x41, 0x4e, 0x41, 0x47,
+	0x45, 0x52, 0x10, 0x0c, 0x42, 0x23, 0x5a, 0x21, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63,
+	0x6f, 0x6d, 0x2f, 0x64, 0x65, 0x72, 0x61, 0x72, 0x6b, 0x65, 0x6e, 0x2f, 0x76, 0x6c, 0x72, 0x2d,
+	0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f,
+	0x33,
 }
 
 var (
@@ -971,39 +1031,40 @@ func file_vlr_api_api_proto_rawDescGZIP() []byte {
 	return file_vlr_api_api_proto_rawDescData
 }
 
-var file_vlr_api_api_proto_enumTypes = make([]protoimpl.EnumInfo, 2)
+var file_vlr_api_api_proto_enumTypes = make([]protoimpl.EnumInfo, 3)
 var file_vlr_api_api_proto_msgTypes = make([]protoimpl.MessageInfo, 11)
 var file_vlr_api_api_proto_goTypes = []any{
 	(MatchState)(0),               // 0: vlr.api.MatchState
-	(RosterEntryRole)(0),          // 1: vlr.api.RosterEntryRole
-	(*Match)(nil),                 // 2: vlr.api.Match
-	(*Team)(nil),                  // 3: vlr.api.Team
-	(*Match_Head)(nil),            // 4: vlr.api.Match.Head
-	(*Match_Versus)(nil),          // 5: vlr.api.Match.Versus
-	(*Match_Map)(nil),             // 6: vlr.api.Match.Map
-	(*Match_Head_Event)(nil),      // 7: vlr.api.Match.Head.Event
-	(*Match_Versus_Team)(nil),     // 8: vlr.api.Match.Versus.Team
-	(*Match_Map_Round)(nil),       // 9: vlr.api.Match.Map.Round
-	(*Team_Head)(nil),             // 10: vlr.api.Team.Head
-	(*Team_Roster)(nil),           // 11: vlr.api.Team.Roster
-	(*Team_Roster_Entry)(nil),     // 12: vlr.api.Team.Roster.Entry
-	(*timestamppb.Timestamp)(nil), // 13: google.protobuf.Timestamp
+	(EventState)(0),               // 1: vlr.api.EventState
+	(RosterEntryRole)(0),          // 2: vlr.api.RosterEntryRole
+	(*Match)(nil),                 // 3: vlr.api.Match
+	(*Team)(nil),                  // 4: vlr.api.Team
+	(*Match_Head)(nil),            // 5: vlr.api.Match.Head
+	(*Match_Versus)(nil),          // 6: vlr.api.Match.Versus
+	(*Match_Map)(nil),             // 7: vlr.api.Match.Map
+	(*Match_Head_Event)(nil),      // 8: vlr.api.Match.Head.Event
+	(*Match_Versus_Team)(nil),     // 9: vlr.api.Match.Versus.Team
+	(*Match_Map_Round)(nil),       // 10: vlr.api.Match.Map.Round
+	(*Team_Head)(nil),             // 11: vlr.api.Team.Head
+	(*Team_Roster)(nil),           // 12: vlr.api.Team.Roster
+	(*Team_Roster_Entry)(nil),     // 13: vlr.api.Team.Roster.Entry
+	(*timestamppb.Timestamp)(nil), // 14: google.protobuf.Timestamp
 }
 var file_vlr_api_api_proto_depIdxs = []int32{
-	4,  // 0: vlr.api.Match.head:type_name -> vlr.api.Match.Head
-	5,  // 1: vlr.api.Match.versus:type_name -> vlr.api.Match.Versus
-	6,  // 2: vlr.api.Match.maps:type_name -> vlr.api.Match.Map
-	10, // 3: vlr.api.Team.head:type_name -> vlr.api.Team.Head
-	11, // 4: vlr.api.Team.roster:type_name -> vlr.api.Team.Roster
+	5,  // 0: vlr.api.Match.head:type_name -> vlr.api.Match.Head
+	6,  // 1: vlr.api.Match.versus:type_name -> vlr.api.Match.Versus
+	7,  // 2: vlr.api.Match.maps:type_name -> vlr.api.Match.Map
+	11, // 3: vlr.api.Team.head:type_name -> vlr.api.Team.Head
+	12, // 4: vlr.api.Team.roster:type_name -> vlr.api.Team.Roster
 	0,  // 5: vlr.api.Match.Head.state:type_name -> vlr.api.MatchState
-	7,  // 6: vlr.api.Match.Head.event:type_name -> vlr.api.Match.Head.Event
-	13, // 7: vlr.api.Match.Head.date_time:type_name -> google.protobuf.Timestamp
-	8,  // 8: vlr.api.Match.Versus.team1:type_name -> vlr.api.Match.Versus.Team
-	8,  // 9: vlr.api.Match.Versus.team2:type_name -> vlr.api.Match.Versus.Team
-	9,  // 10: vlr.api.Match.Map.rounds:type_name -> vlr.api.Match.Map.Round
-	12, // 11: vlr.api.Team.Roster.players:type_name -> vlr.api.Team.Roster.Entry
-	12, // 12: vlr.api.Team.Roster.staff:type_name -> vlr.api.Team.Roster.Entry
-	1,  // 13: vlr.api.Team.Roster.Entry.role:type_name -> vlr.api.RosterEntryRole
+	8,  // 6: vlr.api.Match.Head.event:type_name -> vlr.api.Match.Head.Event
+	14, // 7: vlr.api.Match.Head.date_time:type_name -> google.protobuf.Timestamp
+	9,  // 8: vlr.api.Match.Versus.team1:type_name -> vlr.api.Match.Versus.Team
+	9,  // 9: vlr.api.Match.Versus.team2:type_name -> vlr.api.Match.Versus.Team
+	10, // 10: vlr.api.Match.Map.rounds:type_name -> vlr.api.Match.Map.Round
+	13, // 11: vlr.api.Team.Roster.players:type_name -> vlr.api.Team.Roster.Entry
+	13, // 12: vlr.api.Team.Roster.staff:type_name -> vlr.api.Team.Roster.Entry
+	2,  // 13: vlr.api.Team.Roster.Entry.role:type_name -> vlr.api.RosterEntryRole
 	14, // [14:14] is the sub-list for method output_type
 	14, // [14:14] is the sub-list for method input_type
 	14, // [14:14] is the sub-list for extension type_name
@@ -1155,7 +1216,7 @@ func file_vlr_api_api_proto_init() {
 		File: protoimpl.DescBuilder{
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_vlr_api_api_proto_rawDesc,
-			NumEnums:      2,
+			NumEnums:      3,
 			NumMessages:   11,
 			NumExtensions: 0,
 			NumServices:   0,
